--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   equatable: ^1.0.0
   intl: ^0.16.1
   fluttertoast: ^7.1.1
-  uuid: ^2.2.2
+  flutter_guid: ^0.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
