--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  flutter_web_image_picker: ^0.0.2
+  # flutter_web_image_picker: ^0.0.2
   scoped_model: ^1.0.1
   cupertino_icons: ^0.1.3
   flutter_svg: ^0.18.1
