--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.16.1
   fluttertoast: ^7.1.1
   flutter_guid: ^0.1.0
+  date_range_picker: ^1.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
