--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,37 +22,30 @@ environment:
 
 dependencies:
   flutter:
-   
     sdk: flutter
-
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  # flutter_web_image_picker: ^0.0.2
-  scoped_model: ^1.0.1
-  cupertino_icons: ^0.1.3
-  flutter_svg: ^0.18.1
-  fluro: ^1.6.3
-  keyboard_dismisser: ^1.0.2
-  fancy_bottom_navigation: ^0.3.2
-  flutter_html: ^1.0.2
-  font_awesome_flutter: ^8.8.1
   cached_network_image: ^2.3.2
-  http:  ^0.12.2
-  equatable: ^1.0.0
-  intl: ^0.16.1
-  fluttertoast: ^7.1.1
-  flutter_guid: ^0.1.0
+  cupertino_icons: ^0.1.3
   date_range_picker: ^1.0.6
+  equatable: ^1.0.0
+  fancy_bottom_navigation: ^0.3.2
+  fluro: ^1.6.3
+  flutter_guid: ^0.1.0
+  flutter_html: ^1.0.2
+  flutter_svg: ^0.18.1
+  fluttertoast: ^7.1.1
+  font_awesome_flutter: ^8.8.1
+  get: ^3.13.2
+  http: ^0.12.2
+  intl: ^0.16.1
+  keyboard_dismisser: ^1.0.2
   rxdart: ^0.24.1
+  scoped_model: ^1.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -65,13 +58,10 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
