--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   scoped_model: ^1.0.1
   timeline: ^0.0.1
   timeline_tile: ^1.0.0
+  animated_bottom_navigation_bar: ^0.1.2+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
