--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  animated_bottom_navigation_bar: ^0.1.2+2
   cached_network_image: ^2.3.2
   cupertino_icons: ^0.1.3
   date_range_picker: ^1.0.6
   equatable: ^1.0.0
   fancy_bottom_navigation: ^0.3.2
   fluro: ^1.6.3
+  flutter_google_maps: ^4.0.0
   flutter_guid: ^0.1.0
   flutter_highlight: ^0.6.0
   flutter_html: ^1.0.2
@@ -45,7 +47,6 @@ dependencies:
   scoped_model: ^1.0.1
   timeline: ^0.0.1
   timeline_tile: ^1.0.0
-  animated_bottom_navigation_bar: ^0.1.2+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
