--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   animated_bottom_navigation_bar: ^0.1.2+2
   cached_network_image: ^2.3.2
   cupertino_icons: ^0.1.3
+  cupertino_tabbar: ^1.1.1
   date_range_picker: ^1.0.6
   equatable: ^1.0.0
   fancy_bottom_navigation: ^0.3.2
@@ -43,12 +44,13 @@ dependencies:
   http: ^0.12.2
   intl: ^0.16.1
   keyboard_dismisser: ^1.0.2
+  motion_tab_bar: ^0.1.5
   queries: ^0.1.14
   rxdart: ^0.24.1
   scoped_model: ^1.0.1
+  tab_indicator_styler: ^1.0.0
   timeline: ^0.0.1
   timeline_tile: ^1.0.0
-  tab_indicator_styler: ^1.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
