--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   cupertino_tabbar: ^1.1.1
   date_range_picker: ^1.0.6
+  dio: ^3.0.10
   equatable: ^1.0.0
   fancy_bottom_navigation: ^0.3.2
   fluro: ^1.6.3
