--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ dependencies:
   cupertino_tabbar: ^1.1.1
   date_range_picker: ^1.0.6
   dio: ^3.0.10
+  dynamic_theme: ^1.0.1
   equatable: ^1.0.0
+  faker: ^1.3.0
   fancy_bottom_navigation: ^0.3.2
   fluro: ^1.6.3
   flutter_google_maps: ^4.0.0
@@ -46,8 +48,10 @@ dependencies:
   intl: ^0.16.1
   keyboard_dismisser: ^1.0.2
   motion_tab_bar: ^0.1.5
+  pluto_grid: ^1.0.0
   queries: ^0.1.14
-  rxdart: ^0.24.1
+  responsive_framework: ^0.0.14
+  rxdart: ^0.25.0
   scoped_model: ^1.0.1
   tab_indicator_styler: ^1.0.0
   timeline: ^0.0.1
