--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,13 @@ dependencies:
   cupertino_tabbar: ^1.1.1
   date_range_picker: ^1.0.6
   dio: ^3.0.10
+  dropdown_search: ^0.4.8
   dynamic_theme: ^1.0.1
   equatable: ^1.0.0
   faker: ^1.3.0
   fancy_bottom_navigation: ^0.3.2
   fluro: ^1.6.3
+  flutter_date_pickers: ^0.1.10
   flutter_google_maps: ^4.0.0
   flutter_guid: ^0.1.0
   flutter_highlight: ^0.6.0
