--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
   dropdown_search: ^0.4.8
   dynamic_theme: ^1.0.1
   equatable: ^1.0.0
-  faker: ^1.3.0
   fancy_bottom_navigation: ^0.3.2
   fluro: ^1.6.3
   flutter_date_pickers: ^0.1.10
@@ -40,6 +39,7 @@ dependencies:
   flutter_guid: ^0.1.0
   flutter_highlight: ^0.6.0
   flutter_html: ^1.0.2
+  flutter_masked_text: ^0.8.0
   flutter_spinkit: ^4.1.2+1
   flutter_svg: ^0.18.1
   fluttertoast: ^7.1.1
@@ -50,6 +50,7 @@ dependencies:
   intl: ^0.16.1
   keyboard_dismisser: ^1.0.2
   motion_tab_bar: ^0.1.5
+  number_inc_dec: ^0.6.6
   pluto_grid: ^1.0.0
   queries: ^0.1.14
   responsive_framework: ^0.0.14
