--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   equatable: ^1.0.0
   fancy_bottom_navigation: ^0.3.2
   fluro: ^1.6.3
+  flutter_calendar_carousel: ^1.5.2
   flutter_date_pickers: ^0.1.10
   flutter_google_maps: ^4.0.0
   flutter_guid: ^0.1.0
@@ -49,8 +50,8 @@ dependencies:
   http: ^0.12.2
   intl: ^0.16.1
   keyboard_dismisser: ^1.0.2
+  mask_text_input_formatter: ^1.2.1
   motion_tab_bar: ^0.1.5
-  number_inc_dec: ^0.6.6
   percent_indicator: ^2.1.9
   pluto_grid: ^1.0.0
   queries: ^0.1.14
