--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   pluto_grid: ^1.0.0
   queries: ^0.1.14
   responsive_framework: ^0.0.14
+  responsive_scaffold: ^1.3.0+2
   rxdart: ^0.25.0
   scoped_model: ^1.0.1
   tab_indicator_styler: ^1.0.0
