--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   percent_indicator: ^2.1.9
   pluto_grid: ^1.0.0
   queries: ^0.1.14
+  responsive_builder: ^0.3.0
   responsive_framework: ^0.0.14
   responsive_scaffold: ^1.3.0+2
   rxdart: ^0.25.0
