--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,17 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  animated_bottom_navigation_bar: ^0.1.2+2
   cached_network_image: ^2.3.2
   cupertino_icons: ^0.1.3
   cupertino_tabbar: ^1.1.1
-  date_range_picker: ^1.0.6
   dio: ^3.0.10
   dropdown_search: ^0.4.8
   dynamic_theme: ^1.0.1
   equatable: ^1.0.0
-  fancy_bottom_navigation: ^0.3.2
-  fluro: ^1.6.3
   flutter_calendar_carousel: ^1.5.2
   flutter_date_pickers: ^0.1.10
   flutter_google_maps: ^4.0.0
@@ -44,25 +40,21 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   flutter_svg: ^0.18.1
   fluttertoast: ^7.1.1
-  font_awesome_flutter: ^8.8.1
   get: ^3.24.0
   google_fonts: ^1.1.1
   http: ^0.12.2
-  intl: ^0.16.1
   keyboard_dismisser: ^1.0.2
   mask_text_input_formatter: ^1.2.1
-  motion_tab_bar: ^0.1.5
   percent_indicator: ^2.1.9
-  pluto_grid: ^1.0.0
   queries: ^0.1.14
   responsive_builder: ^0.3.0
   responsive_framework: ^0.0.14
   responsive_scaffold: ^1.3.0+2
   rxdart: ^0.25.0
   scoped_model: ^1.0.1
+  syncfusion_flutter_charts: ^18.4.46
   tab_indicator_styler: ^1.0.0
   table_calendar: ^2.3.3
-  timeline: ^0.0.1
   timeline_tile: ^1.0.0
 dev_dependencies:
   flutter_test:
