--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   responsive_scaffold: ^1.3.0+2
   rxdart: ^0.25.0
   scoped_model: ^1.0.1
+  split_view: ^1.0.3+1
   syncfusion_flutter_charts: ^18.4.46
   tab_indicator_styler: ^1.0.0
   table_calendar: ^2.3.3
