--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   get: ^3.24.0
   google_fonts: ^1.1.1
   http: ^0.12.2
+  im_stepper: ^0.1.2+10
   keyboard_dismisser: ^1.0.2
   mask_text_input_formatter: ^1.2.1
   percent_indicator: ^2.1.9
